fixed spacing of buttons and moved routes to seperate file

--- a/public/css/registration_number.css
+++ b/public/css/registration_number.css
@@ -1,139 +1,155 @@
-*{
- font-family: 'Lato', Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
+
 }
- body{
+
+html,
+body {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: 'Lato', Helvetica, sans-serif;
   background: linear-gradient(90deg, #030303, #2c0f70, #2c0f70, #030303);
- }
- .Reg{
-   font-size: 35px;
- }
- .success {
-   color: green;
- }
- .error {
-   color: red;
- }
-
- p{
-   font-size:  18px;
-   color: #fff;
- }
- h1{
-  
-   text-align: center;
-   color: rgb(241, 12, 12);
-   border-bottom:2px solid black;
-   text-shadow:0 0 5px black;
-   box-shadow:0 0 5px black;
-   text-shadow:2px 2px 4px #000000;
-   font-size: 70px;
-   width: fit-content;
-   margin: auto;
-   
- }
-
-.regnumber{
-max-width: 900px;
-margin: auto;
 }
+
+.success {
+  color: green;
+}
+
+.error {
+  color: red;
+}
+
+p {
+  font-size: 1.2rem;
+  color: #fff;
+}
+
+h1 {
+  text-align: center;
+  color: rgb(241, 12, 12);
+  border-bottom: 2px solid black;
+  text-shadow: 0 0 5px black;
+  box-shadow: 0 0 5px black;
+  text-shadow: 2px 2px 4px #000000;
+  font-size: 2rem;
+  width: fit-content;
+  margin: auto;
+  max-width: 95%;
+
+}
+
+.row, .regnumbers {
+
+  padding: 10px;
+  margin: auto;
+  max-width: 95%;
+}
+
 
 form {
   width: fit-content;
   color: #f1f1f1;
   margin: 0;
- }
-.row {
-
-  padding: 10px;
-  margin: auto;
-  max-width: 700px;
 }
 
-input#userinput, .dropdown{
+
+
+input#userinput,
+.dropdown {
   font-size: 1rem;
   height: 35px;
-  width: 300px;
+  width: 100%;
 }
 
- 
- form {
+
+form {
   font-size: 2rem;
   display: inline-block;
   max-width: 100%;
 
 }
- li {
-   display: block;
-   text-align: center;
-   border: 1px solid black;
-   background-color: yellow;
-   border-radius: 5px;
-   font-size: 25px;
-   margin:10px;
-   padding: 5px;
-   box-shadow: 2px 2px;
-   color: #000;
-   text-transform: uppercase;
-   float: left;
- }
- input{
-   margin-bottom: 15px;
-   text-transform: uppercase;
- 
- }
- 
 
- .resetBtn{
-  
-  width: 100px;
-  height: 60px;
+li {
+  display: inline-block;
   text-align: center;
-  line-height: 60px;
-  color: #fff;
-  font-size: 24px;
+  border: 1px solid black;
+  background-color: yellow;
+  border-radius: 5px;
+  font-size: 1.8rem;
+  margin: 0.7rem;
+  padding: 5px;
+  box-shadow: 2px 2px;
+  color: #000;
   text-transform: uppercase;
-  text-decoration: none;
-  font-family: sans-serif;
-  box-sizing: border-box;
-  background: linear-gradient(90deg, #f4032b, #f441a5, #ffeb3b, #03a9f4);
-  background-size: 400%;
-  border-radius: 30px;
-
- }
- 
-.submitBtn{
-  position: relative;
-  width: 100px;
-  height: 60px;
-  text-align: center;
-  line-height: 60px;
-  color: #fff;
-  font-size: 24px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-family: sans-serif;
-  box-sizing: border-box;
-  background: linear-gradient(90deg, #f4032b, #f441a5, #ffeb3b, #03a9f4);
-  background-size: 400%;
-  border-radius: 30px;
-  z-index: 1; 
+  /* float: left; */
 }
 
- @media only screen and (max-width: 750px) {
- 
- h1{
-   font-size: 25px;
- }
- li{
-   font-size: 25px;
-   width: auto;
-   height: auto;
- }
- .resetBtn{
+input {
+  margin-bottom: 15px;
+  text-transform: uppercase;
+
+}
+
+
+.resetBtn, .submitBtn {
+  width: 66px;
+  height: 40px;
+  text-align: center;
+  line-height: 30px;
+  color: #fff;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-family: sans-serif;
+  box-sizing: border-box;
+  background: linear-gradient(90deg, #f4032b, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  border-radius: 30px;
+  margin-left: 35px;
+}
+
+
+
+@media only screen and (min-width: 750px) {
+
+  h1 {
+    font-size: 5rem;
+  }
+
+  .Reg {
+    font-size: 35px;
+  }
+
+  li {
+    font-size: 25px;
+    width: auto;
+    height: auto;
+  }
+
+  input#userinput,
+.dropdown {
+  font-size: 1rem;
+  height: 35px;
+  width: 300px;
+}
+
+  .row {
+
+    padding: 10px;
+    margin: auto;
+    max-width: 700px;
+  }
   
-  width: auto;
-  height:auto;
-  background-size: auto;
-  margin-left: 425px;
- }
-};
+  .regnumbers {
+    max-width: 900px;
+    margin: auto;
+  }
+
+  .resetBtn {
+    margin-left: 45px;
+  }
+}
